[gd_scene load_steps=20 format=3 uid="uid://dkn2br1guakd7"]

[ext_resource type="Script" uid="uid://cucrpik5r1bd7" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Shader" uid="uid://k3ihvv44dyyb" path="res://scripts/Circle.gdshader" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://cu6xmd4m5wkn8" path="res://assets/rainbow_gradient.tres" id="3_85g3d"]
[ext_resource type="Texture2D" uid="uid://pxnd0338kifw" path="res://assets/blue_gradient.tres" id="4_choun"]
[ext_resource type="Texture2D" uid="uid://c3i5gn0qkeag4" path="res://assets/white_gradient.tres" id="4_ya4ey"]
[ext_resource type="Texture2D" uid="uid://pvuhvfudllux" path="res://assets/green_gradient.tres" id="5_ya4ey"]
[ext_resource type="Texture2D" uid="uid://co5l8kj16lxku" path="res://assets/yellow_gradient.tres" id="6_eb6dy"]
[ext_resource type="Texture2D" uid="uid://dawtp2mlyyqna" path="res://assets/orange_gradient.tres" id="7_trceg"]
[ext_resource type="Texture2D" uid="uid://dp0oxjbsl8t03" path="res://assets/red_gradient.tres" id="8_a8y0u"]
[ext_resource type="Texture2D" uid="uid://dodwdgsuk32l6" path="res://assets/purple_gradient.tres" id="9_jkv2x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5qli"]
bg_color = Color(0, 0, 0, 0.16078432)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jbj1t"]
shader = ExtResource("2_0wfyh")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/inner_radius = 0.3
shader_parameter/outer_radius = 0.45
shader_parameter/feather = 0.01

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sugp2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0wfyh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85g3d"]
bg_color = Color(0, 0, 0, 0.6666667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choun"]
bg_color = Color(0, 0, 0, 0.6666667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya4ey"]
bg_color = Color(0, 0, 0, 0.6666667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb6dy"]
bg_color = Color(0, 0, 0, 0.6666667)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_trceg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18014383, 8.625031e-05, 0.6024823, 1)

[node name="Notes" type="TextEdit" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.69500005
anchor_right = 1.0
anchor_bottom = 0.79
offset_left = 0.35992432
offset_top = 1.0
offset_bottom = 0.07998657
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_o5qli")
placeholder_text = "Notes (Type Here!)"
wrap_mode = 1

[node name="EventList" type="VBoxContainer" parent="ColorRect"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_right = 0.697
anchor_bottom = 1.0
offset_left = -0.03199768
offset_right = 0.05596924
offset_bottom = -2.0
grow_vertical = 2

[node name="EventButtonBackground" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.69500005
anchor_top = 0.78900003
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.35992432
offset_top = -0.2720337
grow_horizontal = 0
grow_vertical = 2
color = Color(0.8, 0.8, 0.8, 1)

[node name="SideBar" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = -1.0
offset_right = 76.0
offset_bottom = 651.0
color = Color(0, 0, 0, 0.43137255)

[node name="Line2D" type="Line2D" parent="ColorRect"]
position = Vector2(20, -100.68283)
scale = Vector2(1, 1.3643557)
points = PackedVector2Array(-20, 68.66452, 51, 68.66452, 51, 277.542, 51, 553.87524, -20, 553.87524)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_top = 2.0
offset_right = 64.0
offset_bottom = 567.0

[node name="None" type="TextureButton" parent="ColorRect/VBoxContainer"]
material = SubResource("ShaderMaterial_jbj1t")
layout_mode = 2
texture_normal = ExtResource("3_85g3d")
texture_pressed = ExtResource("3_85g3d")
texture_hover = ExtResource("3_85g3d")
texture_disabled = ExtResource("3_85g3d")
texture_focused = ExtResource("3_85g3d")

[node name="White" type="TextureButton" parent="ColorRect/VBoxContainer"]
material = SubResource("ShaderMaterial_jbj1t")
layout_mode = 2
texture_normal = ExtResource("4_ya4ey")

[node name="Blue" type="TextureButton" parent="ColorRect/VBoxContainer"]
material = SubResource("ShaderMaterial_jbj1t")
layout_mode = 2
texture_normal = ExtResource("4_choun")
texture_pressed = ExtResource("4_choun")
texture_hover = ExtResource("4_choun")
texture_disabled = ExtResource("4_choun")
texture_focused = ExtResource("4_choun")

[node name="Green" type="TextureButton" parent="ColorRect/VBoxContainer"]
material = SubResource("ShaderMaterial_jbj1t")
layout_mode = 2
texture_normal = ExtResource("5_ya4ey")
texture_pressed = ExtResource("5_ya4ey")
texture_hover = ExtResource("5_ya4ey")
texture_disabled = ExtResource("5_ya4ey")
texture_focused = ExtResource("5_ya4ey")

[node name="Yellow" type="TextureButton" parent="ColorRect/VBoxContainer"]
material = SubResource("ShaderMaterial_jbj1t")
layout_mode = 2
texture_normal = ExtResource("6_eb6dy")
texture_pressed = ExtResource("6_eb6dy")
texture_hover = ExtResource("6_eb6dy")
texture_disabled = ExtResource("6_eb6dy")
texture_focused = ExtResource("6_eb6dy")

[node name="Orange" type="TextureButton" parent="ColorRect/VBoxContainer"]
material = SubResource("ShaderMaterial_jbj1t")
layout_mode = 2
texture_normal = ExtResource("7_trceg")
texture_pressed = ExtResource("7_trceg")
texture_hover = ExtResource("7_trceg")
texture_disabled = ExtResource("7_trceg")
texture_focused = ExtResource("7_trceg")

[node name="Red" type="TextureButton" parent="ColorRect/VBoxContainer"]
material = SubResource("ShaderMaterial_jbj1t")
layout_mode = 2
texture_normal = ExtResource("8_a8y0u")
texture_pressed = ExtResource("8_a8y0u")
texture_hover = ExtResource("8_a8y0u")
texture_disabled = ExtResource("8_a8y0u")
texture_focused = ExtResource("8_a8y0u")

[node name="Purple" type="TextureButton" parent="ColorRect/VBoxContainer"]
material = SubResource("ShaderMaterial_jbj1t")
layout_mode = 2
texture_normal = ExtResource("9_jkv2x")
texture_pressed = ExtResource("9_jkv2x")
texture_hover = ExtResource("9_jkv2x")
texture_disabled = ExtResource("9_jkv2x")
texture_focused = ExtResource("9_jkv2x")

[node name="NewEventButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.69500005
anchor_top = 0.79600006
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.35992432
offset_top = 0.19195557
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_sugp2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0wfyh")
text = "Add Event"

[node name="Shield" type="Button" parent="ColorRect/NewEventButton"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -2.2910001
anchor_top = -3.8940003
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.14105225
offset_top = 0.008056641
offset_right = 5.0
offset_bottom = 9.0
theme_override_styles/normal = SubResource("StyleBoxFlat_85g3d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choun")
theme_override_styles/hover = SubResource("StyleBoxFlat_ya4ey")
theme_override_styles/disabled = SubResource("StyleBoxFlat_eb6dy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_trceg")

[node name="NewEventMenu" type="ColorRect" parent="ColorRect/NewEventButton"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0630002
anchor_top = -3.9090002
anchor_bottom = 1.0
offset_left = 0.113098145
offset_top = -0.011962891
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewEventTitle" type="TextEdit" parent="ColorRect/NewEventButton/NewEventMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.69000006
anchor_bottom = 0.19100001
offset_right = -0.25003052
offset_bottom = 0.231987
theme_override_font_sizes/font_size = 50
placeholder_text = "Title"
wrap_mode = 1

[node name="NewEventDesc" type="TextEdit" parent="ColorRect/NewEventButton/NewEventMenu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.193
anchor_right = 0.69000006
anchor_bottom = 0.85200006
offset_top = -0.06400299
offset_right = -0.25003052
offset_bottom = -0.0960083
theme_override_font_sizes/font_size = 20
placeholder_text = "Desc"
wrap_mode = 1

[node name="SaveChanges" type="Button" parent="ColorRect/NewEventButton/NewEventMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.70600003
anchor_top = 0.39800003
anchor_right = 0.96500003
anchor_bottom = 0.554
offset_left = 0.14996338
offset_top = 0.095947266
offset_right = 0.19952393
offset_bottom = 0.0079956055
text = "SAVE"

[node name="ColorList" type="ItemList" parent="ColorRect/NewEventButton/NewEventMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.69100004
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 0.38300002
offset_left = 0.024963379
offset_top = -0.29603052
offset_right = -1.0
offset_bottom = -0.18403625
allow_search = false
item_count = 7
item_0/text = "White"
item_1/text = "Blue"
item_2/text = "Green"
item_3/text = "Yellow"
item_4/text = "Orange"
item_5/text = "Red"
item_6/text = "Purple"

[connection signal="pressed" from="ColorRect/VBoxContainer/None" to="." method="_on_none_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/White" to="." method="_on_white_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Yellow" to="." method="_on_yellow_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Orange" to="." method="_on_orange_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Purple" to="." method="_on_purple_pressed"]
[connection signal="pressed" from="ColorRect/NewEventButton" to="." method="_on_new_event_button_pressed"]
[connection signal="pressed" from="ColorRect/NewEventButton/Shield" to="." method="_on_shield_pressed"]
[connection signal="pressed" from="ColorRect/NewEventButton/NewEventMenu/SaveChanges" to="." method="_on_save_changes_pressed"]
